--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 frontend/node_modules/
 frontend/cw2/node_modules/
 frontend/cw2/node_modules/*
+backend/node_modules
 frontend/cw2/.pnp
 frontend/cw2/.pnp.js
 
